vlib/v/checker/tests/no_main_println_err.out
vlib/v/checker/tests/no_main_println_err.vv:1:1: error: expected 1 arguments, but got 0
    1 | println()
      | ~~~~~~~~~
